--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,14 @@ body {
   overflow: hidden;
   background-color: #e9e9e9;
 }
+.topnav .logo {
+  display: inline;
 
+}
+.topnav .logo .title{
+  font-size: 3.5em;
+  vertical-align: bottom;
+}
 .topnav .search-container {
   float: right;
 }
@@ -52,7 +59,6 @@ body {
     border: 1px solid #ccc;  
   }
 }
-
 .mainBody{
 	overflow: hidden;
   	background-color: #f5f5f0;
@@ -97,4 +103,7 @@ body {
 }
 .width15{
 	width: 15%;
+}
+.filters {
+  padding: 10px 0px;
 }
