--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ body {
 }
 .topnav .search-container {
   float: right;
+  margin-right: 50px;
 }
 
 .topnav input[type=text] {
@@ -26,6 +27,7 @@ body {
   margin-top: 8px;
   font-size: 17px;
   border: none;
+  width: 120%;
 }
 
 .topnav .search-container button {
@@ -61,8 +63,7 @@ body {
 }
 .mainBody{
 	overflow: hidden;
-  	background-color: #f5f5f0;
-  	height: 100%; 
+  height: 100%; 
 }
 
 .divTable{
@@ -106,4 +107,8 @@ body {
 }
 .filters {
   padding: 10px 0px;
+}
+.releaseBodyPage {
+    position: relative;
+    left: 13%;
 }
